--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngxs/store": "^3.7.6",
     "chart.js": "^3.3.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "primeflex": "^3.2.0",
     "primeicons": "6.0.1",
